<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueBackground"
    tools:context=".HomeScreen">

    <ImageView
        android:id="@+id/quizCatImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:scaleType="center"
        android:src="@drawable/quizcatlogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quizCatTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/QuizCatTxt"
        android:textColor="@color/textColour"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizCatImg" />

    <TextView
        android:id="@+id/enterNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:text="@string/enterNameTxt"
        android:textColor="@color/textColour"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizCatTxt" />

    <EditText
        android:id="@+id/nameEditTxt"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/box_styles"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:text="@string/nameEditTxt"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterNameTxt" />

    <TextView
        android:id="@+id/invalidNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="99dp"
        android:fontFamily="@font/nunito_sans"
        android:letterSpacing="0.03"
        android:text="@string/invalidNameTxt"
        android:textColor="@color/Red"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditTxt" />

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:background="@drawable/nav_buttons"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/continueBtn"
        android:textColor="@color/textColour"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>